feat: add score
