# docs/api.yml
@@ -21,74 +21,7 @@ paths:
                 items:
                   $ref: '#/components/schemas/Sponsor'
         '500':
-          description: Internal server error
-    post:
-      tags:
-        - Sponsors
-      summary: create new sponsors
-      operationId: createSponsors
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: array
-              items:
-                $ref: '#/components/schemas/CreateSponsor'
-      responses:
-        '200':
-          description: List of created Sponsors
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Sponsor'
-        '500':
-          description: Internal server error
-    put:
-      tags:
-        - Sponsors
-      summary: update some sponsors
-      operationId: updateSponsors
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: array
-              items:
-                $ref: '#/components/schemas/Sponsor'
-      responses:
-        '200':
-          description: List of updated sponsors
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Sponsor'
-        '500':
-          description: Internal server error   
-  /sponsors/{id}:
-    delete:
-      tags:
-        - Sponsors
-      summary: delete a specific sponsor
-      operationId: deleteSponsor
-      parameters:
-        - in: path
-          name: id
-          schema:
-            type: integer
-          required: true
-      responses:
-        '200':
-          description: Return the deleted sponsor
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Sponsor'
-        '500':
-          description: Internal server error           
+          description: Internal server error    
   /players:
     get:
       tags:
@@ -105,74 +38,7 @@ paths:
                 items:
                   $ref: '#/components/schemas/Player'
         '500':
-          description: Internal server error
-    post:
-      tags:
-        - Players
-      summary: create new players
-      operationId: createPlayers
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: array
-              items:
-                $ref: '#/components/schemas/CreatePlayer'
-      responses:
-        '200':
-          description: List of created players
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Player'
-        '500':
-          description: Internal server error 
-    put:
-      tags:
-        - Players
-      summary: update some players
-      operationId: updatePlayers
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: array
-              items:
-                $ref: '#/components/schemas/UpdatePlayer'
-      responses:
-        '200':
-          description: List of updated players
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Player'
-        '500':
-          description: Internal server error   
-  /players/{id}:
-    delete:
-      tags:
-        - Players
-      summary: delete a specific player
-      operationId: deleteSponsor
-      parameters:
-        - in: path
-          name: id
-          schema:
-            type: integer
-          required: true
-      responses:
-        '200':
-          description: Return the deleted player
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Player'
-        '500':
-          description: Internal server error               
+          description: Internal server error           
   /teams:
     get:
       tags:
@@ -190,171 +56,49 @@ paths:
                   $ref: '#/components/schemas/Team'
         '500':
           description: Internal server error
-    post:
-      tags:
-        - Teams
-      summary: create new teams
-      operationId: createTeams
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: array
-              items:
-                $ref: '#/components/schemas/CreateTeam'
-      responses:
-        '200':
-          description: List of created Teams
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Team'
-        '500':
-          description: Internal server error
-    put:
-      tags:
-        - Teams
-      summary: update some teams
-      operationId: updateSponsors
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: array
-              items:
-                $ref: '#/components/schemas/UpdateTeam'
-      responses:
-        '200':
-          description: List of updated teams
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Team'
-        '500':
-          description: Internal server error
-  /teams/{id}:
-    delete:
-      tags:
-        - Teams
-      summary: delete a specific team
-      operationId: deleteTeam
-      parameters:
-        - in: path
-          name: id
-          schema:
-            type: integer
-          required: true
-      responses:
-        '200':
-          description: Return the deleted team
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Team'
-        '500':
-          description: Internal server error    
   /match:
     get:
       tags:
-        - Play Against
-      summary: get all play against
-      operationId: getPlayAgainst
+        - Match
+      summary: get all match
+      operationId: getMatch
       responses:
         '200':
-          description: List of play against
+          description: List of match
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/PlayAgainst'
+                  $ref: '#/components/schemas/Match'
         '500':
           description: Internal server error
-    post:
+  /scores:
+    get:
       tags:
-        - Play Against
-      summary: create new play against
-      operationId: createPlayAgainst
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: array
-              items:
-                $ref: '#/components/schemas/CreatePlayAgainst'
+        - Scores
+      summary: get all scores
+      operationId: getScores
       responses:
         '200':
-          description: List of created play against
+          description: List of scores
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/PlayAgainst'
+                  $ref: '#/components/schemas/Score'
         '500':
-          description: Internal server error
-    put:
-      tags:
-        - Play Against
-      summary: update some play against
-      operationId: updatePlayAgainst
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: array
-              items:
-                $ref: '#/components/schemas/UpdatePlayAgainst'
-      responses:
-        '200':
-          description: List of updated play against
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/PlayAgainst'
-        '500':
-          description: Internal server error
-  /match/{id}:
-    delete:
-      tags:
-        - Play Against
-      summary: delete a specific play against
-      operationId: deletePlayAgainst
-      parameters:
-        - in: path
-          name: id
-          schema:
-            type: integer
-          required: true
-      responses:
-        '200':
-          description: Return the deleted play against
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/PlayAgainst'
-        '500':
-          description: Internal server error              
+          description: Internal server error        
 components:
   schemas:
     Sponsor:
       type: object
-      allOf:
-        - $ref: '#/components/schemas/CreateSponsor'
-      properties:
-        id:
-          type: integer
-    CreateSponsor:
-      type: object
       properties:
         name:
           type: string
+        id:
+          type: integer  
     Player:
       type: object
       properties:
@@ -362,71 +106,54 @@ components:
           type: integer
         name:
           type: string
-    UpdatePlayer:
-      allOf:
-        - $ref: '#/components/schemas/CreatePlayer'
-      properties:
-        number:
-          type: integer
-        id:
-          type: integer  
-    CreatePlayer:
-      type: object
-      properties:
-        name:
-          type: string
-        number:
-          type: integer
+        post:
+          type: string  
     Team:
       type: object
       properties:
         id:
           type: integer
-      allOf:
-        - $ref: '#/components/schemas/CreateTeam'    
-    CreateTeam:
-      type: object
-      properties:
         name:
           type: string
         players:
-          allOf:
-            - $ref: '#/components/schemas/Player'
+          type: array
+          items:
+            $ref: '#/components/schemas/Player'
         sponsors:
-          allOf:
-            - $ref: '#/components/schemas/Sponsor'  
-    UpdateTeam:
-      type: object
-      allOf:
-        - $ref: '#/components/schemas/Team'   
-    PlayAgainst:
+          type: array
+          items:
+            $ref: '#/components/schemas/Sponsor'  
+    Match:
       type: object
       properties:
         id:
           type: integer
-        team1:
+        teamA:
           allOf:
             -  $ref: '#/components/schemas/Team' 
-        team2:
+        teamB:
           allOf:
             -  $ref: '#/components/schemas/Team'       
         dateTime:
-          type: string
-    UpdatePlayAgainst:
-      type: object  
+          type: string  
+        scores:    
+          allOf:
+            -  $ref: '#/components/schemas/Score'  
+        scoreTeamA:
+          type: integer
+        scoreTeamB:
+          type: integer      
+    Score:
+      type: object
       properties:
         id:
           type: integer
-      allOf:
-        - $ref: '#/components/schemas/CreatePlayAgainst'        
-    CreatePlayAgainst:
-      type: object
-      properties:
-        id_team1:
-          type: integer
-        id_team2:
-          type: integer
-        dateTime:
-          type: string
-        stadium:
-          type: string
+        matchId:
+          type: integer  
+        player:
+          allOf:
+            -  $ref: '#/components/schemas/Player'     
+        times:
+          type: integer   
+        isOS:
+          type: boolean
