# src/main/java/app/prog/controller/PlayerController.java
@@ -1,10 +1,7 @@
 package app.prog.controller;
 
 import app.prog.controller.mapper.PlayerRestMapper;
-import app.prog.controller.response.CreatePlayerResponse;
 import app.prog.controller.response.PlayerResponse;
-import app.prog.controller.response.UpdatePlayerResponse;
-import app.prog.model.PlayerEntity;
 import app.prog.service.PlayerService;
 import lombok.AllArgsConstructor;
 import org.springframework.web.bind.annotation.*;
@@ -25,28 +22,4 @@ public class PlayerController {
                 .toList();
     }
 
-    @PostMapping("/players")
-    public List<PlayerResponse> createBooks(@RequestBody List<CreatePlayerResponse> toCreate) {
-        List<PlayerEntity> domain = toCreate.stream()
-                .map(mapper::toDomain)
-                .toList();
-        return service.createPlayers(domain).stream()
-                .map(mapper::toRest)
-                .toList();
-    }
-
-    @PutMapping("/players")
-    public List<PlayerResponse> updateBooks(@RequestBody List<UpdatePlayerResponse> toUpdate) {
-        List<PlayerEntity> domain = toUpdate.stream()
-                .map(mapper::toDomain)
-                .toList();
-        return service.updatePlayers(domain).stream()
-                .map(mapper::toRest)
-                .toList();
-    }
-
-    @DeleteMapping("/players/{id}")
-    public PlayerResponse deleteBook(@PathVariable int id) {
-        return mapper.toRest(service.deletePlayer(id));
-    }
 }
