# src/main/java/app/prog/controller/TeamController.java
@@ -1,10 +1,7 @@
 package app.prog.controller;
 
 import app.prog.controller.mapper.TeamRestMapper;
-import app.prog.controller.response.CreateTeamResponse;
 import app.prog.controller.response.TeamResponse;
-import app.prog.controller.response.UpdateTeamResponse;
-import app.prog.model.TeamEntity;
 import app.prog.service.TeamService;
 import lombok.AllArgsConstructor;
 import org.springframework.web.bind.annotation.*;
@@ -25,28 +22,4 @@ public class TeamController {
                 .toList();
     }
 
-    @PostMapping("/teams")
-    public List<TeamResponse> createBooks(@RequestBody List<CreateTeamResponse> toCreate) {
-        List<TeamEntity> domain = toCreate.stream()
-                .map(mapper::toDomain)
-                .toList();
-        return service.createTeams(domain).stream()
-                .map(mapper::toRest)
-                .toList();
-    }
-
-    @PutMapping("/teams")
-    public List<TeamResponse> updateBooks(@RequestBody List<UpdateTeamResponse> toUpdate) {
-        List<TeamEntity> domain = toUpdate.stream()
-                .map(mapper::toDomain)
-                .toList();
-        return service.updateTeams(domain).stream()
-                .map(mapper::toRest)
-                .toList();
-    }
-
-    @DeleteMapping("/teams/{id}")
-    public TeamResponse deleteBook(@PathVariable int id) {
-        return mapper.toRest(service.deleteTeam(id));
-    }
 }
