# src/main/java/app/prog/controller/response/ScoreResponse.java
@@ -1,17 +1,18 @@
 package app.prog.controller.response;
 
-import app.prog.model.TeamEntity;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Data;
 import lombok.NoArgsConstructor;
 
-@NoArgsConstructor
+@Builder
 @AllArgsConstructor
 @Data
-@Builder
-public class PlayerResponse {
+@NoArgsConstructor
+public class ScoreResponse {
     private int id;
-    private String name;
-    private String post;
+    private int matchId;
+    private PlayerResponse player;
+    private int times;
+    private Boolean isOS;
 }
